Mostrar trabajadores listo

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="container botonesPrincipales">
                     <button id="iniciarJuego"><i class="icono"><img src="./media/futurama-slurms-mackenzie-pack (3).png"></i>Iniciar Juego</button> 
-                    <button id="finalizarJuego"><i class="icono"><img src="./media/arma.png"></i>Finalizar Juego</button>
+                    <button id="finalizarJuego"><i class="icono"><img src="./media/arma.png"></i>Reiniciar Juego</button>
                 </div> 
             </section>
             <section id="interfaz" class="container">
@@ -68,43 +68,43 @@
                             <div class="cardAdquiridos">
                                 <img src="./media/farnsworth-and-planet-express-ship-pack (1).png">
                                 <p>Slurm Vendida: 0</p>
-                                <p>Dinero por venta: $1000</p>
+                                <p>Dinero generado esta ronda: $1000</p>
                             </div>
                             <div class="cardAdquiridos">
                                 <img src="./media/farnsworth-and-planet-express-ship-pack (1).png">
                                 <p>Slurm Vendida: 0</p>
-                                <p>Dinero por venta: $1000</p>
+                                <p>Dinero generado esta ronda: $1000</p>
                             </div>
                             <div class="cardAdquiridos">
                                 <img src="./media/farnsworth-and-planet-express-ship-pack (1).png">
                                 <p>Slurm Vendida: 0</p>
-                                <p>Dinero por venta: $1000</p>
+                                <p>Dinero generado esta ronda: $1000</p>
                             </div>
                             <div class="cardAdquiridos">
                                 <img src="./media/farnsworth-and-planet-express-ship-pack (1).png">
                                 <p>Slurm Vendida: 0</p>
-                                <p>Dinero por venta: $1000</p>
+                                <p>Dinero generado esta ronda: $1000</p>
                             </div>
                             <div class="cardAdquiridos">
                                 <img src="./media/farnsworth-and-planet-express-ship-pack (1).png">
                                 <p>Slurm Vendida: 0</p>
-                                <p>Dinero por venta: $1000</p>
+                                <p>Dinero generado esta ronda: $1000</p>
                             </div>
                             <div class="cardAdquiridos">
                                 <img src="./media/farnsworth-and-planet-express-ship-pack (1).png">
                                 <p>Slurm Vendida: 0</p>
-                                <p>Dinero por venta: $1000</p>
+                                <p>Dinero generado esta ronda: $1000</p>
                             </div>
                             <div class="cardAdquiridos">
                                 <img src="./media/farnsworth-and-planet-express-ship-pack (1).png">
                                 <p>Slurm Vendida: 0</p>
-                                <p>Dinero por venta: $1000</p>
+                                <p>Dinero generado esta ronda: $1000</p>
                             </div>
                         </div>
                     </div>
             </section>
-            <h3 class="text-center titulo-trabajadores">Estos son los trabajadores disponibles</h3>
-            <div class="trabajadores container" id="trabajadores"></div>
+            <div class="trabajadores container" id="trabajadores">
+            </div>
         </div>
     </main>
     <script src="./js/trabajadores.js" type="text/javascript"></script>
