Array de adquiridos con card

--- a/index.html
+++ b/index.html
@@ -63,43 +63,43 @@
                                 <button id="vender"><i class="icono"><img src="./media/cajero-automatico.png"></i>Vender Slurm</button>
                             </div> 
                         </div>
-                        <div class="col-sm-6">
-                            <p class="text-center">TRABAJADORES ADQUIRIDOS</p>
+                        <div class="col-sm-6" id="misTrabajadores">
+                            <!--<p id="tituloMisTrabajadores" class="text-center">TRABAJADORES ADQUIRIDOS</p>
                             <div class="cardAdquiridos">
-                                <img src="./media/farnsworth-and-planet-express-ship-pack (1).png">
+                                <img src="./media/1.png">
                                 <p>Slurm Vendida: 0</p>
                                 <p>Dinero generado esta ronda: $1000</p>
                             </div>
                             <div class="cardAdquiridos">
-                                <img src="./media/farnsworth-and-planet-express-ship-pack (1).png">
+                                <img src="./media/1.png">
                                 <p>Slurm Vendida: 0</p>
                                 <p>Dinero generado esta ronda: $1000</p>
                             </div>
                             <div class="cardAdquiridos">
-                                <img src="./media/farnsworth-and-planet-express-ship-pack (1).png">
+                                <img src="./media/1.png">
                                 <p>Slurm Vendida: 0</p>
                                 <p>Dinero generado esta ronda: $1000</p>
                             </div>
                             <div class="cardAdquiridos">
-                                <img src="./media/farnsworth-and-planet-express-ship-pack (1).png">
+                                <img src="./media/1.png">
                                 <p>Slurm Vendida: 0</p>
                                 <p>Dinero generado esta ronda: $1000</p>
                             </div>
                             <div class="cardAdquiridos">
-                                <img src="./media/farnsworth-and-planet-express-ship-pack (1).png">
+                                <img src="./media/1.png">
                                 <p>Slurm Vendida: 0</p>
                                 <p>Dinero generado esta ronda: $1000</p>
                             </div>
                             <div class="cardAdquiridos">
-                                <img src="./media/farnsworth-and-planet-express-ship-pack (1).png">
+                                <img src="./media/1.png">
                                 <p>Slurm Vendida: 0</p>
                                 <p>Dinero generado esta ronda: $1000</p>
                             </div>
                             <div class="cardAdquiridos">
-                                <img src="./media/farnsworth-and-planet-express-ship-pack (1).png">
+                                <img src="./media/1.png">
                                 <p>Slurm Vendida: 0</p>
                                 <p>Dinero generado esta ronda: $1000</p>
-                            </div>
+                            </div>-->
                         </div>
                     </div>
             </section>
