--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li>En cada ronda, tus trabajadores venderán una cantidad aleatoria de vasos de Slurm</li>
                     <li>En algunas rondas podrás incorporar trabajadores (por un precio), y esto te ayudará a vender una mayor cantidad de Slurm</li>
                 </ul>
-                <p>¿Cómo ganar? Una vez finalizadas las 5 rondas, a tu ganancia le descontamos los $500.000 del barril y vemos cuántos has vendido</p>
+                <p>¿Cómo ganar? Una vez finalizadas las 10 rondas, a tu ganancia le descontamos los $500.000 del barril y vemos cuántos has vendido</p>
             </div>
             <section id="datos" class="container-fluid">  
                 <div class="row datos-row">
@@ -60,7 +60,9 @@
                             <p>Deuda Inversión: $50000</p>-->
                             <div class="container botonesSecundarios">
                                 <button id="comprar" class="comprar"><i class="icono"><img src="./media/finanzas.png"></i>Comprar Trabajador</button>
-                                <button id="vender"><i class="icono"><img src="./media/cajero-automatico.png"></i>Vender Slurm</button>
+                                <button id="vender" class="vender"><i class="icono"><img src="./media/cajero-automatico.png"></i>Vender Slurm</button>
+                                <button id="siguienteRonda" class="siguienteRonda noMostrar"><i class="icono"><img src="./media/futurama-slurms-mackenzie-pack (1).png"></i>Siguiente Ronda</button>
+                                <button id="finDelJuego" class="finDelJuego  noMostrar"><i class="icono"><img src="./media/bolsa-de-dinero.png"></i>Finalizar Juego</button>
                             </div>
                             <p class="text-center" id="avisos">Avisos: </p> 
                         </div>
