Listo. Falta JSON y detalles minimos

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </section>
             <section id="interfaz" class="container ocultarInterfaz">
                     <div class="ronda row">
-                        <div class="col-sm-6 datosRonda">
+                        <div class="col-sm-6 datosRonda" id="datosRonda">
                             <!--<p>RONDA: 1</p>
                             <p>Caja Registradora: $50000</p>
                             <p>Slurm Vendida: $50000</p>
