funcionalidad completa. Sin JSON

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             </section>
             <section id="interfaz" class="container ocultarInterfaz">
                 <div class="container datosJugador" id="datosJugador">
+                    <span class="datoJugador">Ronda actual: <strong><span id="rondaActual">0</span></strong></span>
                     <span class="datoJugador">Ronda por iniciar: <strong><span id="ronda">0</span></strong></span>
                     <span class="datoJugador">Caja Registradora: <strong><span id="cajaRegistradora">3000</span></strong></span>
                     <span class="datoJugador">Cantidad Vendida: <strong><span id="cantidadVendida">0</span></strong></span>
